styles.css
body {
  background:#cccccc;
  color:black;
  font-size:0.7em;
  margin:0px;
}

p {
  font-family: 'Arial', sans-serif;
  letter-spacing: 0.1em;
  font-size: 0.8em;
}

a {
  text-decoration:none;
  color:black;
}

a:visited {
  color:black;
}

a:hover {
  font-size:1.2em;
  -webkit-transition:0.3s ease;
  -moz-transition:0.3s ease;
  -ms-transition:0.3s ease;
  -o-transition:0.3s ease;
  transition:0.3s ease;
  border-bottom:3px solid black;
}

a:hover.image{
  border-bottom:none;
  font-size:1em;
  -webkit-filter: drop-shadow(-1px 2px 2px grey);
  filter: drop-shadow(-1px 2px 2px grey);
}

a.textLink {
  color:#1D8B37;
}

#myGmail {
  color:#1D8B37;
}

#myGmail:hover {
  text-decoration:underline;
  cursor:pointer;
}

ul {
  list-style-type:none;
}

h1 {
  text-shadow: -2px 3px 3px rgba(150, 150, 150, 0.5);
}

h1, h2 {
  font-weight:normal;
  font-size:5em;
  letter-spacing:0.5em;
  text-transform:uppercase;
  margin:0.1em;
}

h2 {
  font-size:2em;
  text-align:center;
}

h3, .nav li {
  font-family: 'Roboto', sans-serif;
  letter-spacing: 0.15em;
  text-transform:uppercase;
}

h3 {
  text-align: center;
}

.container {
}

#me {
  width: 7em;
  height:7em;
  margin-left:49%;
  margin-right:50%;
  border-radius:50%;
}

.svg {
  width:85%;
  margin:auto;
  margin-bottom:-0.3em;
}

[class*='col-'] {
  width:94%;
  text-align: center;
}

.nav {
  position: fixed;
  width:98%;
  background-color: rgba(204, 204, 204, 0.9);
  margin-top:0px;
  z-index:1;
  -webkit-transition:0.4s ease;
  -moz-transition:0.4s ease;
  -ms-transition:0.4s ease;
  -o-transition:0.4s ease;
  transition:0.4s ease;
}

.light-nav {
  background-color: rgba(255,255,255,0.85);
  padding:0.2em 0em 0.2em 0em;
  width:100%;
  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
}

.topic {
  width:90%;
  margin:auto;
  background-color:#dddddd;
  padding: 4em 2em 4em 2em;
  /*margin: 0em 2em 7em 2em;*/
  box-sizing:border-box;
  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  margin-bottom:3em;
}

.landing {
  text-align: center;
  height:71vh;
  padding-top:30vh;
  padding-bottom:30vh;
  box-sizing:border-box;
}

.row {
  overflow:auto;
}


.nav li {
  float:right;
  margin-left:1em;
  margin-right:1em;
  padding:1em;
  font-size:0.8em;
}

#home {
  float:left;
}

/*---------------------SKILL BAR---------------------*/

.backing {
  background-color: #eeeeee;
  margin:1%;
  padding: 1em 0em 1em 0em;
  line-height:1.5em;
  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
}

.skill ul {
  width:90%;
  margin:auto;
  padding:0px;
}

.skillbar {
  position:relative;
  display:block;
  margin-bottom:0.6em;
  width:94%;
  background:#fff;
  height:1.5em;
  -webkit-transition:0.4s ease;
  -moz-transition:0.4s ease;
  -ms-transition:0.4s ease;
  -o-transition:0.4s ease;
  transition:0.4s ease;
  -webkit-transition-property:width, background-color;
  -moz-transition-property:width, background-color;
  -ms-transition-property:width, background-color;
  -o-transition-property:width, background-color;
  transition-property:width, background-color;
  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
}


.skillbar-bar {
  height:1.5em;
  width:5em;
  -webkit-filter: brightness(88%); /* Safari */
  filter: brightness(88%);
}

.skillbar-title {
  position:absolute;
  top:0;
  left:0;
  width:7em;
  font-size:0.7em;
  color:#ffffff;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 0.1em;
}

.skillbar-title span {
  display:block;
  padding:0 1em;
  height:1.9em;
  line-height:1.9em;
  background:rgba(0, 0, 0, 0.3);
}

.html {
  background-color: #EC662B;
}

.css {
  background-color: #33A9DC;
}

.jquery {
  background-color: #0769AD;
}

.javascript {
  background-color: #FFD83A;
}

.angular {
  background-color: #CD2C27;
}

.react {
  background-color: #00D8FF;
}

.node {
  background-color: #90C53F;
}

.express {
  background-color: #3AA040;
}

.sql {
  background-color: #F29111;
}

.sequelize {
  background-color: #1F6EB5;
}

.mongo {
  background-color: #1D8B37;
}

.gulp {
  background-color: #CF4646;
}

.jasmine {
  background-color: #8A4182;
}

/*-----------------------PORTFOLIO--------------------------*/

img.app{
  width:90%;
  margin:auto;
  padding:2em;
}

.info {
  text-align: center;
  padding:5em 0em 5em 0em;
}

.app {
  -webkit-filter: drop-shadow(-1px 2px 5px #cccccc);
  filter: drop-shadow(-1px 2px 5px #cccccc);
}

.info img {
  max-width:3em;
}

/*---------------------------ART HOBBY------------------------*/
.art img {
  max-height:50vh;
  max-width:98%;
  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
}

/*---------------------------CONTACT------------------------*/

.row.contact {
  width:100%;
  margin:auto;
  margin-left:2.7%;
}

.contact img {
  max-width:3em;
  padding:1%;
}

.tooltip {
  position:relative;
}

.tooltip #tooltipText {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;

    /* Position the tooltip */
    position: absolute;
    z-index: 1;
    top: 100%;
    left: 50%;
    margin-left: -60px;
}

/*-----------------------MEDIA SCREEN--------------------------*/

@media only screen and (min-width: 700px) {
  body {
    font-size:0.9em;
  }
  .col-4 {
    min-height:1%;
    width: 31%;
    float:left;
  }

  .col-3 {
    width: 20.5%;
    float:left;
    margin-left:3%;
    margin-right:3%;
  }

  .col-6 {
    float:left;
    width:47%;
  }

  .col-12 {
    width:90%;
    margin:auto;
    margin-bottom:1.5em;
  }

  .skillbar-title span {
    padding:0 1em;
    height:2.15em;
    line-height:2.15em;
  }
}

@media only screen and (min-width: 1500px) {
  body {
    font-size:1.3em;
  }
  .col-6.art {
    margin-left:4%;
    width:43%;
  }
}

